<resources>
    <string name="app_name">Emir_Karabey_Odev_8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_aile">Aile</string>
    <string name="menu_kisilerim">Kişilerim</string>
    <string name="menu_hepsi">Hepsi</string>
    <string name="menu_okul">Okul</string>
    <string name="menu_arkadaslar">Arkadaşlar</string>
    <string name="menu_is">İş</string>
    <string name="menu_hali_saha">Halı Saha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_items">
        <item>Aile</item>
        <item>Okul</item>
        <item>Arkadaşlar</item>
        <item>Halı Saha</item>
        <item>İş</item>
        <!-- Daha fazla seçenek eklenebilir -->
    </string-array>
</resources>